Modified the code to guess gate.home to be more robust.  In particular, it should handle cases where the target gate.home contains spaces in its path.